[package]
name = "fast-socks5"
version = "0.4.3"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Fast SOCKS5 client/server implementation written in Rust async/.await (with async-std)"
repository = "https://github.com/dizda/fast-socks5"

[dependencies]
futures = "0.3.23"
log = "0.4.17"
async-std = { version = "1.12.0", features = ["std"] }
anyhow = "1.0.62"
thiserror = "1.0.32"

# Dependencies for examples/
[dev-dependencies]
env_logger = "0.9.0"
structopt = "0.3.26"

[[example]]
name = "server"

[[example]]
name = "client"

[[example]]
name = "simple_tcp_server"
